tests/ui/typeck/issue-81943.stderr
error[E0308]: mismatched types
  --> $DIR/auxiliary/issue-81943-lib.rs:6:36
   |
LL | macro_rules! d {
   | -------------- in this expansion of `lib::d!`
LL |   ($e:expr) => { match $e { x => { $crate::g(x) } } }
   |                                    ^^^^^^^^^^^^ expected `()`, found `i32`
   |
  ::: $DIR/issue-81943.rs:7:9
   |
LL |   f(|x| lib::d!(x));
   |         ---------- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/issue-81943.rs:8:28
   |
LL |   f(|x| match x { tmp => { g(tmp) } });
   |         -------------------^^^^^^----
   |         |                  |
   |         |                  expected `()`, found `i32`
   |         expected this to be `()`
   |
help: consider using a semicolon here
   |
LL |   f(|x| match x { tmp => { g(tmp); } });
   |                                  +
help: consider using a semicolon here
   |
LL |   f(|x| match x { tmp => { g(tmp) } };);
   |                                      +

error[E0308]: mismatched types
  --> $DIR/issue-81943.rs:10:38
   |
LL | /   macro_rules! d {
LL | |     ($e:expr) => { match $e { x => { g(x) } } }
   | |                    ------------------^^^^----
   | |                    |                 |
   | |                    |                 expected `()`, found `i32`
   | |                    expected this to be `()`
LL | |   }
   | |___- in this expansion of `d!`
LL |     f(|x| d!(x));
   |           ----- in this macro invocation
   |
help: consider using a semicolon here
   |
LL |     ($e:expr) => { match $e { x => { g(x); } } }
   |                                          +
help: consider using a semicolon here
   |
LL |     ($e:expr) => { match $e { x => { g(x) } }; }
   |                                              +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
